@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST newrelic_rpm-2.9.4.gem 294400 RMD160 1572f2c147f0633312285494fd1725697a5435c3 SHA1 aaf7ca5942abe457d3ab3980b3b4f0c56c89ce49 SHA256 e8d87e5c7e83f31ca6c7ec30a811c991184d8df743feffb6d0996c6de9794458
+DIST newrelic_rpm-2.9.9.gem 294912 RMD160 afa2797bc4cdc445ccf506e124e1cf0d33af5b65 SHA1 1b10f83ea05d097149b194c375e0d3d7482b9f92 SHA256 6d0912fc56dedf809f7de713a7724784465e50b2c92559c594e85ded32e0319d
 EBUILD newrelic_rpm-2.9.4.ebuild 415 RMD160 b3ecc225a2dd4f8a3a70f7529360dbdd0393c6bf SHA1 a2c291cb404e1124eb59d4cfbedcaa16aa9ff63f SHA256 7f6659e3f4fbbc3acd75cafe5a80bee5ce04d668804aac12a9dfd5085b90edd7
-MISC ChangeLog 271 RMD160 2f12775d9a7c80b64baec1edc2259374f08d609b SHA1 859ca713e208395c22ed4df802202606e223f5ec SHA256 261ce82e5df3c9f2e393d0a4e2c9cd7a35f661618fb29cda64f4c54220f9fbf7
+EBUILD newrelic_rpm-2.9.9.ebuild 625 RMD160 ae7c660e93ab2dd65f50bfab5c4cccc27d6f419e SHA1 f9f2a7a58351ed2e019b829141e91be48d408d5b SHA256 1e16edf741d182e68e197a0e93c546be1937b3b316125840bdb5b18b16178a1c
+MISC ChangeLog 428 RMD160 086a58085d020b9b52a680200fc2a2c7a3fe8c71 SHA1 1e9b7f877f11a70b593d4626464a6e5ef8b9f592 SHA256 21391a558166c4926b105443bc8b1622ca46bf7587da094bfb6a1e296bf6a4c5
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkqmLOEACgkQVYU2Ai8K93dKfQCgvQaTzpAcNnAY3limxQ4ThodV
-F/QAn1JdTNxaChvmTjpSJhCc9joRXIrW
-=kXdB
+iEYEARECAAYFAktQJA4ACgkQeM7EJeUH71PvDgCeK0UYLi0E5IXBMOK+YcuNANST
+KKAAn33PFlNLhxUPtmLFQe1aCmsreFcL
+=f69T
 -----END PGP SIGNATURE-----
