@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/newrelic_rpm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*newrelic_rpm-2.9.9 (15 Jan 2010)
+
+  15 Jan 2010; Hans de Graaff <graaff@gentoo.org>
+  +newrelic_rpm-2.9.9.ebuild:
+  Version bump. Convert to ruby-fakegem.
 
 *newrelic_rpm-2.9.4 (08 Sep 2009)
 
